[gd_scene load_steps=5 format=3 uid="uid://bfhfhhkbc4iwi"]

[ext_resource type="Script" uid="uid://8ldp23r5wcy6" path="res://scripts/entities/inverted.gd" id="1_72dv8"]
[ext_resource type="PackedScene" uid="uid://cg307d2ally3i" path="res://scenes/components/grid_movement.tscn" id="2_stjdp"]
[ext_resource type="Texture2D" uid="uid://dp3kilp5ysd8o" path="res://assets/slime.png" id="3_pbs6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72dv8"]
size = Vector2(8, 8)

[node name="inverted" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_72dv8")

[node name="grid_movement" parent="." node_paths=PackedStringArray("character", "sprite") instance=ExtResource("2_stjdp")]
character = NodePath("..")
scaling = -1
sprite = NodePath("../Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(2.38419e-07, 2.38419e-07)
texture = ExtResource("3_pbs6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_72dv8")

[node name="ray_up" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(0, -8)
hit_from_inside = true
metadata/_edit_lock_ = true

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(-8, 0)
hit_from_inside = true
metadata/_edit_lock_ = true

[node name="ray_down" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(0, 8)
hit_from_inside = true
metadata/_edit_lock_ = true

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(8, 0)
hit_from_inside = true
metadata/_edit_lock_ = true
